--- a/html/blog.html
+++ b/html/blog.html
@@ -263,6 +263,8 @@
                         \sum_{i=1}^{n} [x_i \neq y_i]
                         \]</div>
                     <hr>
+                        <h4>perpendicular (adj.) : at an angle of 90° to a horizontal line or surface;垂直的</h4>
+                    <hr>
                         <h4>scalability interoperability sustainability</h4>
                     <hr>
                         <h4>Unmounted file system: 該檔案系統存在於裝置上,但目前沒有被接到系統的目錄樹中,因此作業系統與使用者都無法透過路徑存取它.</h4>
