--- a/html/progress.html
+++ b/html/progress.html
@@ -11,6 +11,7 @@
   <table>
     <tr>
         <th>人數</th>
+        <th>准考證</th>
         <th>學校</th>
         <th>103</th>
         <th>104</th>
@@ -27,6 +28,7 @@
     </tr>
     <tr>
         <td>2350</td>
+        <td></td>
         <th><a href="交大.html">交大</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -44,6 +46,7 @@
     </tr>
     <tr>
         <td>2008</td>
+        <td></td>
         <th><a href="清大.html">清大</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -60,6 +63,7 @@
     </tr>
     <tr>
         <td>1956</td>
+        <td>&#10004;</td>
         <th><a href="成大.html">成大</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -76,6 +80,7 @@
     </tr>
     <tr>
         <td>2134</td>
+        <td></td>
         <th><a href="中央.html">中央</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -92,6 +97,7 @@
     </tr>
     <tr>
         <td>1376</td>
+        <td>&#10004;</td>
         <th><a href="中山.html">中山</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -108,6 +114,7 @@
     </tr>
     <tr>
         <td>1868</td>
+        <td>&#10004;</td>
         <th><a href="中興.html">中興</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -124,6 +131,7 @@
     </tr>
     <tr>
         <td>1461</td>
+        <td></td>
         <th><a href="中正.html">中正</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -140,6 +148,7 @@
     </tr>
     <tr>
         <td>1572</td>
+        <td></td>
         <th><a href="台科.html">台科</a></th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -156,6 +165,7 @@
     </tr>
     <tr>
         <td>316</td>
+        <td></td>
         <th><a href=政大.html>政大</a></th>
         <td>&#10008;</td ><!-- 103 -->
         <td>&#10008;</td ><!-- 104 -->
@@ -172,6 +182,7 @@
     </tr>
     <tr>
         <td>381</td>
+        <td>&#10004;</td>
         <th><a href="師大.html">師大</a></th>
         <td>&#10004;</td ><!-- 103 -->
         <td>&#10004;</td ><!-- 104 -->
@@ -188,6 +199,7 @@
     </tr>
     <tr>
         <td>1189</td>
+        <td></td>
         <th>北科</th>
         <td></td ><!-- 103 -->
         <td></td ><!-- 104 -->
@@ -204,6 +216,7 @@
     </tr>
     <tr>
         <td>296</td>
+        <td>&#10004;</td>
         <th><a href="臺北.html">臺北</a></th>
         <td>nan</td ><!-- 103 -->
         <td></td ><!-- 104 -->
