--- a/html/blog.html
+++ b/html/blog.html
@@ -438,6 +438,9 @@
                             (3) NP-Problem<br>
                             (4) P-Problem
                         </div>
+                        <h4><span style="color: blue;">The halting problem</span>(a problem to determine whether or not any arbitrary program can stop)<span style="color: blue;"> is undecidable</span><br>
+                            The halting problem is undecidable and therefore strictly harder than any NP-hard problem in terms of computability.
+                        </h4>
                         <h4>若\(\text{A}&le;_p\text{B}\), 則\(\text{B}\)為polynomial-time solvable \(\implies \) \(\text{A}\)為polynomial-time solvable</h4>
                         <h4>若\(&exist;\)一個\(\text{NP-complete}\)的問題為polynomial-time solvable, 則\(\text{P}&equals;\text{NP}\)</h4>
                         <h4>任意P皆可\(&le;_p\)P, NP, NP-complete, NP-hard</h4>
