--- a/html/blog.html
+++ b/html/blog.html
@@ -217,6 +217,7 @@
                     <hr>
                         <h3><u>gcd is associative on integer:gcd(gcd(a,b),c)=gcd(a,gcd(b,c)).</u>set difference(-),division(/),implication(->),cartesian product(x) is not associative.</h3>
                         <h3>Methods of Proof:  \(\text{direct method, contrapositive method}(P \implies Q \equiv \neg Q \implies \neg P \equiv \neg P \lor Q) \text{and contradiction method(反證法)}\)</h3>
+                        <h4>\(P \implies Q\), \(Q\) is a Necessary Condition for \(P\). \(P\) is a Sufficient Condition for \(Q\).</h4>
                         <h3>Open interval: \( \{ x \mid a < x < b \} \), 以\(\left( a,b \right)\)表示之, a ○───────○ b</h3>
                         <h3>Closed interval: \( \{ x \mid a \le x \le b \} \), 以\(\left[ a,b \right]\)表示之,  a ●───────● b</h3>
                         <h3>Cantor's Theorem:For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.</h3>
